; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_status.c_thread_adjuserstack.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_status.c_thread_adjuserstack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arm_saved_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @thread_adjuserstack(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.arm_saved_state*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.arm_saved_state* @get_user_regs(i32 %7)
  store %struct.arm_saved_state* %8, %struct.arm_saved_state** %5, align 8
  %9 = load %struct.arm_saved_state*, %struct.arm_saved_state** %5, align 8
  %10 = call i32 @get_saved_state_sp(%struct.arm_saved_state* %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %6, align 4
  %13 = add nsw i32 %12, %11
  store i32 %13, i32* %6, align 4
  %14 = load %struct.arm_saved_state*, %struct.arm_saved_state** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @set_saved_state_sp(%struct.arm_saved_state* %14, i32 %15)
  %17 = load i32, i32* %6, align 4
  ret i32 %17
}

declare dso_local %struct.arm_saved_state* @get_user_regs(i32) #1

declare dso_local i32 @get_saved_state_sp(%struct.arm_saved_state*) #1

declare dso_local i32 @set_saved_state_sp(%struct.arm_saved_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
